# rwaapi

./: .gitpod.dockerfile  .gitpod.yml  README.md  index.js  package-lock.json  package.json  planetoid.js
functions/: hello_v_0.0.0.wasm  hello_v_0.0.1.wasm  hey_v_0.0.0.wasm  hey_v_0.0.1.wasm
libs/: fake.wasm.child.process.js  rust.wasm.loader.js  wasm.child.process.js
public/: index.html
routes/: admin.js  deploy.js  fake.functions.js  functions.fork.js  functions.js
src/: README.md  build-function.sh  build-hello.sh  call-function.js  call-hello.js  create-function.sh  deploy-function.sh  function.template.rs  yo.wasm
src/hello/: Cargo.toml
src/hello/src/: lib.rs
src/hey/: Cargo.toml
src/hey/src/: lib.rs
src/yo/: Cargo.toml
src/yo/src/: lib.rs
tests/: call.fake.sh  call.fork.hello.sh  call.fork.hey.sh  call.hello.sh  call.hey.sh  call.yo.sh  deploy.yo.sh  planetoid.load.testing.sh  run.fake.load.testing.sh  run.fork.sh  run.load.testing.sh  run.sh  yo.wasm
